--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             </tbody>
         </table>
     </div>
-    <script src="js.bundle.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 
 </html>
