--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
             <tbody>
 
             </tbody>
+            <thead id='sum-bar'> 
+            <tr> </tr>
+            </thead>
         </table>
     </div>
     <script src="js/bundle.js"></script>
