Fix test for column sum

--- a/client/js/test/fixtures/sheet-container.html
+++ b/client/js/test/fixtures/sheet-container.html
@@ -1,4 +1,4 @@
-    <div class="container">
+       <div class="container">
         <input id="formula-bar" type="text" value "" />
         <table id="sheet-current">
             <thead>
@@ -7,5 +7,8 @@
             <tbody>
 
             </tbody>
+            <div class='sumContainer'>
+            <tr id='sum-bar'> </tr>
+            </div>
         </table>
     </div>
