--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
             <tbody>
 
             </tbody>
-            <thead id='sum-bar'> 
-            <tr> </tr>
-            </thead>
+            <div class='sumContainer'>
+            <tr id='sum-bar'> </tr>
+            </div>
         </table>
     </div>
     <script src="js/bundle.js"></script>
