Implement AddRow and AddColumn features

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
             <tr id='sum-bar'> </tr>
             </div>
         </table>
+        <button id="addColumn" type="button">Add Column</button>
+    <button id="addRow" type="button">Add Row</button>
     </div>
     <script src="js/bundle.js"></script>
 </body>
