--- a/client/js/test/fixtures/sheet-container.html
+++ b/client/js/test/fixtures/sheet-container.html
@@ -11,4 +11,6 @@
             <tr id='sum-bar'> </tr>
             </div>
         </table>
+        <button id="addColumn" type="button">Add Column</button>
+    <button id="addRow" type="button">Add Row</button>
     </div>
